--- a/subprojects/docs/src/docs/userguide/dep-man/01-core-dependency-management/viewing_debugging_dependencies.adoc
+++ b/subprojects/docs/src/docs/userguide/dep-man/01-core-dependency-management/viewing_debugging_dependencies.adoc
@@ -20,10 +20,8 @@ It also displays information about dependency conflict resolution.
 The `dependencies` task marks dependency trees with the following annotations:
 
 - `(*)`: Repeat occurrence of a transitive dependency subtree. Gradle expands transitive dependency subtrees only once per project; repeat occurrences only display the root of the subtree, followed by this annotation.
-- `(c)`: Dependencies whose version is limited by dependency constraints.
-- `(n)`: A dependency or dependency configuration that cannot be resolved. Sometimes called a producer.
-
-For more information about unresolvable dependency configurations, see <<declaring_dependencies.adoc#sec:resolvable-consumable-configs>>.
+- `(c)`: This element is a <<dependency_constraints.adoc#sec:direct-vs-transitive-deps,dependency constraint>>, not a dependency. Look for the matching dependency elsewhere in the tree.
+- `(n)`: A dependency or dependency configuration that <<declaring_dependencies.adoc#sec:resolvable-consumable-configs,cannot be resolved>>.
 
 === Specify a Dependency Configuration
 
