--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_general.adoc
@@ -605,7 +605,7 @@ The automatically available `buildSrc` is great for rapid prototyping, but it co
 Ideally, there would be no difference between using `buildSrc` and an included build, `buildSrc` is intended to behave like an implicitly available included build.
 However, due to historical reasons, some subtle differences still exist.
 Gradle is working to unify the behavior of these two approaches, and this recommendation may be revised in the future.
-At present, however, the differences can be a potential stumbling block.
+For now, these differences can introduce confusion and are best avoided.
 
 As there is only minor additional configuration necessary to setup a composite build, we recommend using these instead of `buildSrc`.
 
