--- a/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_7.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/releases/upgrading/upgrading_version_7.adoc
@@ -129,7 +129,7 @@ With Gradle 8.0 you should use Kotlin Gradle Plugin 1.6.10 or later and Android 
 
 The legacy `AntlrSourceVirtualDirectory` API has been removed.
 This change affects the `antlr` plugin.
-In Gradle 8.0 and above, use the `AntlrSourceDirectorySet` source set extension instead.
+In Gradle 8.0 and above, use the `AntlrGrammarDirectorySet` source set extension instead.
 
 ==== JvmPluginsHelper
 
