--- a/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/dependency_management_basics.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/dependency_management_basics.adoc
@@ -122,7 +122,7 @@ include::sample[dir="snippets/dependencyManagement/introductionDependencies/kotl
 include::sample[dir="snippets/dependencyManagement/introductionDependencies/groovy",files="build.gradle[tags=dependency-intro-catalog]"]
 ====
 
-To learn more, consult the <<TO DO,Dependency Management chapter>>.
+To learn more, consult the <<getting_started_dep_man.adoc#dependency-management-in-gradle,Dependency Management chapter>>.
 
 [.text-right]
 **Next Step:** <<task_basics.adoc#task_basics,Learn about Tasks>> >>
