--- a/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/best-practices/best_practices_tasks.adoc
@@ -203,7 +203,7 @@ include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollectio
 include::sample[dir="snippets/bestPractices/avoidJdkCollectionApiOnFileCollections/groovy",files="build.gradle[tags=bad-zipping-task]"]
 ====
 
-<1> *Add file via plus operator*: Plus operator will force runtimeClasspath configuration to be resolved implicitly. Task dependencies will be lost.
+<1> *Add file via plus operator*: Plus operator will force runtimeClasspath configuration to be resolved implicitly. Configuration implementation doesn't override plus operator for regular files, therefore it fallsback to eager API. Task dependencies will be lost here.
 
 ==== Do This Instead
 
